--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     </section>
     <div id="main">
         <div>
-        <img id="turkey" src="/Media/turkey.webp" alt="profilpick">
+        <img id="turkey" src="Media/turkey.webp" alt="profilpick">
     </div>
         <div id="infos">
         <h1>Atilla Sahin</h1>
         <p>14 y/o student from Zurich</p>
         <div id="links">
-            <a href="mailto:sahin.atilla@gmx.ch"><img src="/Media/mail-removebg-preview.png" /></a>
+            <a href="mailto:sahin.atilla@gmx.ch"><img src="Media/mail-removebg-preview.png" /></a>
             </a>
             <a href="https://www.instagram.com/zuerich_atilla42/">
-                <img id="insta" src="/Media/insta.png" alt="insta">
+                <img id="insta" src="Media/insta.png" alt="insta">
             </a>
             <a href="https://github.com/Atilla-42">
-                <img id="github" src="/Media/github.png" alt="github">
+                <img id="github" src="Media/github.png" alt="github">
             </a>
         </div>
     </div>
         <div>
-        <img id="face" src="/Media/WIN_20230303_04_30_27_Pro.jpg" alt="profilpick">
+        <img id="face" src="Media/WIN_20230303_04_30_27_Pro.jpg" alt="profilpick">
     </div>
 </div>
     <section id="top">
